# rlsimlink

./: .gitignore  README.md  env-registry.conf  pyproject.toml
examples/: atari.py  dmlab.py  vizdoom.py
rlsimlink/: __init__.py  cli.py  utils.py
rlsimlink/docker/: __init__.py  docker-compose.yml  docker.py  utils.py
rlsimlink/docker/dockerfiles/: Dockerfile.dmlab  Dockerfile.minerl
rlsimlink/env_requirements/: atari.txt  vizdoom.txt
rlsimlink/src/: __init__.py  client.py  env_runtime.py  server.py  socket_paths.py
rlsimlink/src/common/: __init__.py  action_space.py  socket_manager.py
rlsimlink/src/envs/: __init__.py
rlsimlink/src/envs/atari/: __init__.py  build_env.py  env_manager.py  env_wrapper.py
rlsimlink/src/envs/dmc/: __init__.py
rlsimlink/src/envs/dmlab/: __init__.py  build_env.py  dmlab.py  env_manager.py
rlsimlink/src/envs/metaworld/: __init__.py
rlsimlink/src/envs/minecraft/: __init__.py
rlsimlink/src/envs/minerl/: __init__.py  build_env.py  env_manager.py
rlsimlink/src/envs/vizdoom/: __init__.py  build_env.py  env_manager.py  env_wrapper.py
scripts/: atari.sh  dmlab.sh  visualize.sh  vizdoom.sh
